# mrSubmitters

./: .gitignore  CMakeLists.txt  README.md
config/: tractorConfig.py
meshroom/simpleFarmSubmitter/: simpleFarmSubmitter.py
meshroom/tractorSubmitter/: tractorConfig.json  tractorSubmitter.py
meshroom/tractorSubmitter/api/: base.py  subtaskCreator.py  tractorJobCreation.py  tractorJobQuery.py
python/submitterCredentialUi/: __init__.py  app.py
script/: tractorSubtaskWrapper.py
test/: createJob.py  createRenderSubtasks.py  postrenderTask.py  prerenderTask.py  renderSubtask.py
